test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-mutate-and-generate/clusterrolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: background-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
  name: kyverno:gen-pv
rules:
- apiGroups:
  - ""
  resources:
  - persistentvolumes
  - pods
  verbs:
  - update
  - create
  - delete
  - get
  - list
  - watch
