test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-mutate-and-generate/first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: first-pod
  namespace: shared-dp
spec:
  containers:
    - name: container
      image: nginx
