test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-mutate-and-generate/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shared-dp
