test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-mutate-and-generate/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-test-1
  namespace: shared-dp
spec:
  containers:
    - name: container
      image: nginx
