test/conformance/chainsaw/generate/clusterpolicy/standard/data/sync/cpol-data-sync-mutate-and-generate/pvc.yaml
kind: PersistentVolumeClaim
apiVersion: v1
metadata:
  name: shared-dp-pvc
  namespace: shared-dp
spec:
  accessModes:
    - ReadWriteMany
  resources:
    requests:
      storage: 1Gi
  storageClassName: standard
  volumeMode: Filesystem
